--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -32,6 +33,8 @@ android {
 }
 
 dependencies {
+    //versions
+    def paging_version = "2.1.2"
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
@@ -54,6 +57,8 @@ dependencies {
 
     //chrome custom tab
     implementation "androidx.browser:browser:1.3.0"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
